<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".lunchMenu"
    android:background="@drawable/fk_menu_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lunch_menu"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.057" />

    <TextView
        android:id="@+id/lunch_item_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="136dp"
        android:text="@string/lunch_item_1"
        android:textSize="20sp"
        android:textColor="@drawable/textview_colour"
        android:clickable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lunch_item_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/lunch_item_2"
        android:textSize="20sp"
        android:textColor="@drawable/textview_colour"
        android:clickable="true"
        app:layout_constraintStart_toStartOf="@+id/lunch_item_1"
        app:layout_constraintTop_toBottomOf="@+id/lunch_item_1"></TextView>

    <TextView
        android:id="@+id/lunch_item_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:clickable="true"
        android:minHeight="48dp"
        android:text="@string/lunch_item_3"
        android:textColor="@drawable/textview_colour"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/lunch_item_2"
        app:layout_constraintTop_toBottomOf="@+id/lunch_item_2"></TextView>

    <TextView
        android:id="@+id/lunch_item_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/lunch_item_4"
        android:textSize="20sp"
        android:textColor="@drawable/textview_colour"
        android:clickable="true"
        app:layout_constraintStart_toStartOf="@+id/lunch_item_3"
        app:layout_constraintTop_toBottomOf="@+id/lunch_item_3"></TextView>

    <TextView
        android:id="@+id/lunch_item_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/lunch_item_5"
        android:textSize="20sp"
        android:textColor="@drawable/textview_colour"
        android:clickable="true"
        app:layout_constraintStart_toStartOf="@+id/lunch_item_4"
        app:layout_constraintTop_toBottomOf="@+id/lunch_item_4"></TextView>

    <TextView
        android:id="@+id/lunch_item_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/lunch_item_6"
        android:textSize="20sp"
        android:textColor="@drawable/textview_colour"
        android:clickable="true"
        app:layout_constraintStart_toStartOf="@+id/lunch_item_5"
        app:layout_constraintTop_toBottomOf="@+id/lunch_item_5"></TextView>


    <TextView
        android:id="@+id/lunch_item_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:minHeight="48dp"
        android:text="@string/lunch_item_7"
        android:textColor="@drawable/textview_colour"
        android:textSize="20sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"></TextView>

    <TextView
        android:id="@+id/lunch_item_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:clickable="true"
        android:text="@string/lunch_item_8"
        android:textColor="@drawable/textview_colour"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/lunch_item_7"
        app:layout_constraintTop_toBottomOf="@+id/lunch_item_7"></TextView>

    <TextView
        android:id="@+id/lunch_item_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:clickable="true"
        android:text="@string/lunch_item_9"
        android:textColor="@drawable/textview_colour"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/lunch_item_8"
        app:layout_constraintTop_toBottomOf="@+id/lunch_item_8"></TextView>

    <TextView
        android:id="@+id/lunch_item_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:clickable="true"
        android:text="@string/lunch_item_10"
        android:textColor="@drawable/textview_colour"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/lunch_item_9"
        app:layout_constraintTop_toBottomOf="@+id/lunch_item_9"></TextView>

    <TextView
        android:id="@+id/lunch_item_11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:clickable="true"
        android:text="@string/lunch_item_11"
        android:textColor="@drawable/textview_colour"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/lunch_item_10"
        app:layout_constraintTop_toBottomOf="@+id/lunch_item_10"></TextView>

    <TextView
        android:id="@+id/lunch_item_12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:clickable="true"
        android:text="@string/lunch_item_12"
        android:textColor="@drawable/textview_colour"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/lunch_item_11"
        app:layout_constraintTop_toBottomOf="@+id/lunch_item_11"></TextView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="205dp" />


</androidx.constraintlayout.widget.ConstraintLayout>